Added input box and button

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
     <h1>My Task Manager</h1>
-    <p>This is where my tasks will go.</p>
+    
+    <div>
+        <input type="text" id="taskInput" placeholder="Enter a new task...">
+        <button id="addTaskBtn">Add Task</button>
+    </div>
+
+    <ul>
+        </ul>
+
+    <script src="app.js"></script>
 </body>
 </html>
